--- a/Dockerfile.reactions
+++ b/Dockerfile.reactions
@@ -5,7 +5,7 @@ WORKDIR /app
 
 # Kopiujemy skrypt przetwarzający transakcje i plik reguł
 COPY reaction_processor.py .
-COPY fraud_score_rules.json .
+COPY fraud.py .
 
 # Instalujemy kafka-python (do konsumpcji i ewentualnego wysyłania alertów/blokad)
 RUN pip install kafka-python
